--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^8.1.3",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.3",
-    "session-file-store": "^1.5.0"
+    "session-file-store": "^1.5.0",
+    "solapi": "^5.3.0"
   }
 }
